--- a/ventana1.html
+++ b/ventana1.html
@@ -45,7 +45,7 @@
             <div class="col col-5">
                 <div class="row">
                     <h2>
-                        N° Ultima Factura de Fabrica: 12345
+                        N° Ult. Factura de Fabrica: 12345
                     </h2>
                 </div>
                 <div class="row">
@@ -114,8 +114,7 @@
             <table>
                 <table class="table table-hover table-bordered">
                     <thead>
-                        <tr style=" background-color: #246355;
-    color: white;">
+                        <tr style=" background-color: #246355;color: white;">
                             <th>Proveedores alternativos</th>
                             <th>Número</th>
                             <th>Nombre</th>
