--- a/ventana1.html
+++ b/ventana1.html
@@ -210,6 +210,34 @@
                                 <td>7</td>
                                 <td>3312, tenemos un 3312</td>
                             </tr>
+                            <tr>
+                                <td>14/11/2017</td>
+                                <td>AO51896AS</td>
+                                <td>15</td>
+                                <td>7</td>
+                                <td>Un niño floto sobre mi y volo un auto con su rayo laser</td>
+                            </tr>
+                            <tr>
+                                <td>14/11/2017</td>
+                                <td>AO51896AS</td>
+                                <td>15</td>
+                                <td>7</td>
+                                <td>3312, tenemos un 3312</td>
+                            </tr>
+                            <tr>
+                                <td>14/11/2017</td>
+                                <td>AO51896AS</td>
+                                <td>15</td>
+                                <td>7</td>
+                                <td>Un niño floto sobre mi y volo un auto con su rayo laser</td>
+                            </tr>
+                            <tr>
+                                <td>14/11/2017</td>
+                                <td>AO51896AS</td>
+                                <td>15</td>
+                                <td>7</td>
+                                <td>3312, tenemos un 3312</td>
+                            </tr>
                         </tbody>
                     </table>
                 </table>
