--- a/ventana2.html
+++ b/ventana2.html
@@ -18,7 +18,7 @@
         <div class="row">
             <h1>Chapa|Patente: ***</h1>
         </div>
-        <table class="table table-hover table-bordered">
+        <table class="table table-bordered">
             <thead>
                 <th>N° Motor</th>
                 <th>N° Chasis</th>
@@ -87,7 +87,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <table class="table table-hover table-bordered">
+                <table class="table table-bordered">
                     <thead>
                         <th>Codigo</th>
                         <th>Descripción</th>
