--- a/ventana1.html
+++ b/ventana1.html
@@ -59,7 +59,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <table class="table table-hover table-bordered">
+                    <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>Ultimo Proveedor</th>
@@ -85,7 +85,7 @@
             </div>
             <div class="col col-5">
                 <table>
-                    <table class="table table-hover table-bordered">
+                    <table class="table table-bordered">
                         <!-- <thead>
                             <tr>
                                 <th>Cod.</th>
@@ -122,7 +122,7 @@
             <div class="col">
                 <h3>Proveedores Alternativos</h3>
             <table>
-                <table class="table table-hover table-bordered">
+                <table class="table table-bordered">
                     <thead>
                         <tr style=" background-color: #246355;color: white;">
                             <th>Proveedores alternativos</th>
@@ -185,7 +185,7 @@
         <div class="row">
             <div class="col">
                 <table>
-                    <table class="table table-hover table-bordered">
+                    <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>Fecha Utilización</th>
