se actualizo el archivo

--- a/ventana1.html
+++ b/ventana1.html
@@ -12,21 +12,27 @@
 
     <title>TP diseño</title>
     <style>
+        .blanco_mate {
+            background: #f8eee6;
+        }
+        .tablex {
+            background-color: #d2d5d9;
+        }
         .buscador {
             border-top-left-radius: 20px;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 30px;
             border-bottom-left-radius: 30px;
         }
-        tr:nth-child(even){
-        background-color: #ddd;
+        /* tr:nth-child(even){
+        background-color: #ddd; */
 }
 
     </style>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container blanco_mate">
         <div class="row">
             <div class="col">
                 <h3>Codigo respuesto 12345</h3>
