--- a/ventana2.html
+++ b/ventana2.html
@@ -11,93 +11,146 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>TP diseño 2</title>
+    <style type="text/css">
+        .table {
+            text-align: left;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th,
+        td {
+            border: solid 1px black;
+            padding: 0;
+        }
+
+        .selector {
+            padding-left: 32px;
+            font-size: small;
+        }
+
+        th {
+            color: white;
+            vertical-align: middle;
+        }
+
+        tr:nth-child(even) {
+            background-color: #fff2de;
+        }
+
+        .btn {
+            padding-top: 14px;
+            padding-bottom: 14px;
+            padding-right: -3px;
+        }
+
+        h5 {
+            margin-top: 2px;
+
+            padding-left: 15px;
+            font-size: small;
+        }
+    </style>
 </head>
 
-<body>
+<body style="background: #f4f4f4;">
     <div class="container">
         <div class="row">
-            <h1>Chapa|Patente: ***</h1>
-        </div>
-        <table class="table table-bordered">
-            <thead>
-                <th>N° Motor</th>
-                <th>N° Chasis</th>
-                <th>Fecha de compra</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-                <tr>
-                    <td>151891321698</td>
-                    <td>dfaasfdj561856asd</td>
-                    <td>14/08/2019</td>
-                </tr>
-            </tbody>
-            <hr>
-            </hr>
-        </table>
-        <hr></hr>
-        <div class="row justify-content-center">
-            <div class="col">
+            <div class="col-6">
+                <h2>Chapa|Patente: ***</h2>
+            </div>
+            <div class="col-5">
                 <div class="row">
-                    <div class="col-2">
-                        <h3>Repuestos</h3>
+                    <div class="col-4">
+                        <h2>Repuestos</h2>
                     </div>
-                    <div class="col-11">
-                        SELECCIONAR PERIODO: Desde: <input type="date" id="bday" name="bday">
-                        Hasta: <input type="date" id="bday" name="bday">
-                        <button type="button" style="background-color: #246355" class="btn btn-success btn">Aplicar</button>
-                        <p></p>
+                    <div class="col-2">
+                        <h5>SELECCIONE</h5>
+                        <h5>PERIODO:</h5>
+                    </div>
+                    <div class="col-5 selector">
+                        <div class="row justify-content-center">
+                            Desde: <input type="date" id="bday" name="bday">
+                        </div>
+                        <div class="row justify-content-center">
+                            Hasta: <input type="date" id="bday" name="bday">
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <button type="button" style="background-color: #246355"
+                            class="btn btn-success btn-sm">Aplicar</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <table class="table table-bordered">
-                    <thead>
-                        <th>Codigo</th>
-                        <th>Descripción</th>
+        <hr>
+        </hr>
+        <div class="row justify-content-between">
+            <div class="col-6">
+                <table class="table">
+                    <thead style="background-color: #246355">
+                        <th style="width: 20%">N° Motor</th>
+                        <th>N° Chasis</th>
+                        <th style="width: 20%">Fecha compra</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                        <tr>
+                            <td>151891321698</td>
+                            <td>dfaasfdj561856asd</td>
+                            <td>14/08/2019</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-6">
+                <table class="table">
+                    <thead style="background-color: #246355;">
+                        <th style=" vertical-align: middle;">Codigo</th>
+                        <th style=" vertical-align: middle;">Descripción</th>
                         <th>Fecha Ult. Factura</th>
                         <th>N° Ult. Factura</th>
                     </thead>
                     <tbody>
                         <tr>
                             <td>156846</td>
-                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius facilis voluptatibus?</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
+                                facilis
+                                voluptatibus?</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
@@ -109,13 +162,16 @@
                         </tr>
                         <tr>
                             <td>156846</td>
-                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
+                            </td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
                         <tr>
                             <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam, iste architecto eum labore enim.</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
+                                iste architecto
+                                eum labore enim.</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
@@ -133,7 +189,9 @@
                         </tr>
                         <tr>
                             <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur non consectetur quia maxime dolorem, libero distinctio quas?</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
+                                non
+                                consectetur quia maxime dolorem, libero distinctio quas?</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
@@ -148,7 +206,7 @@
             </div>
         </div>
     </div>
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
