--- a/ventana2.html
+++ b/ventana2.html
@@ -104,71 +104,73 @@
             </div>
         </div>
         <div class="row">
-            <table class="table">
-                <thead style="background-color: #246355;">
-                    <th style=" vertical-align: middle;">Codigo</th>
-                    <th style=" vertical-align: middle;">Descripción</th>
-                    <th>Fecha Ult. Factura</th>
-                    <th>N° Ult. Factura</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
-                            facilis
-                            voluptatibus?</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit amet.</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
-                        </td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
-                            iste architecto
-                            eum labore enim.</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit.</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem, ipsum dolor.</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
-                            non
-                            consectetur quia maxime dolorem, libero distinctio quas?</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                    <tr>
-                        <td>156846</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
-                        <td>14/08/2019</td>
-                        <td>12345</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="col">
+                <table class="table">
+                    <thead style="background-color: #246355;">
+                        <th style=" vertical-align: middle;">Codigo</th>
+                        <th style=" vertical-align: middle;">Descripción</th>
+                        <th>Fecha Ult. Factura</th>
+                        <th>N° Ult. Factura</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
+                                facilis
+                                voluptatibus?</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
+                            </td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
+                                iste architecto
+                                eum labore enim.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem, ipsum dolor.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
+                                non
+                                consectetur quia maxime dolorem, libero distinctio quas?</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
