--- a/ventana2.html
+++ b/ventana2.html
@@ -59,27 +59,27 @@
             <div class="col-6">
                 <h2>Chapa|Patente: ***</h2>
             </div>
+            <div class="row">
+                <div class="col-6">
+                    <table class="table">
+                        <thead style="background-color: #246355">
+                            <th style="width: 20%">N° Motor</th>
+                            <th>N° Chasis</th>
+                            <th style="width: 20%">Fecha compra</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>151891321698</td>
+                                <td>dfaasfdj561856asd</td>
+                                <td>14/08/2019</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
         <hr>
         </hr>
-        <div class="row justify-content-between">
-            <div class="col-6">
-                <table class="table">
-                    <thead style="background-color: #246355">
-                        <th style="width: 20%">N° Motor</th>
-                        <th>N° Chasis</th>
-                        <th style="width: 20%">Fecha compra</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>151891321698</td>
-                            <td>dfaasfdj561856asd</td>
-                            <td>14/08/2019</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
         <div class="row">
                 <div class="col-4">
                     <h2>Repuestos</h2>
