--- a/ventana2.html
+++ b/ventana2.html
@@ -50,28 +50,35 @@
             padding-left: 15px;
             font-size: small;
         }
+
+        .chapa_patente{
+            margin-top: 10px;
+            border: solid 1px black;
+            margin-right: 50px;
+            padding: 10px;
+        }
     </style>
 </head>
 
 <body style="background: #f4f4f4;">
     <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <h2>Chapa|Patente: ***</h2>
+        <div class="row justify-content-between">
+            <div class="col-4">
+                <h2 class="chapa_patente" style="background: #246355; color: white;">Chapa|Patente: 12245</h2>
             </div>
-            <div class="row">
-                <div class="col-6">
+            <div class="row justify-content-between">
+                <div class="col-8">
                     <table class="table">
                         <thead style="background-color: #246355">
-                            <th style="width: 20%">N° Motor</th>
+                            <th>N° Motor</th>
                             <th>N° Chasis</th>
-                            <th style="width: 20%">Fecha compra</th>
+                            <th style="width: 100%;">Fecha compra</th>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>151891321698</td>
-                                <td>dfaasfdj561856asd</td>
-                                <td>14/08/2019</td>
+                                <td style="width: 100%;">151891321698</td>
+                                <td style="width: 100%;">dfaasfdj561856asdasdasdasfas</td>
+                                <td style="width: 100%;">   14/08/2019   </td>
                             </tr>
                         </tbody>
                     </table>
