--- a/ventana2.html
+++ b/ventana2.html
@@ -51,19 +51,19 @@
             <div class="col-4">
                 <h2 class="chapa_patente" style="background: #246355; color: white;">Chapa|Patente: 12245</h2>
             </div>
-            <div class="row justify-content-between">
-                <div class="col-8">
-                    <table class="table">
+            <div class="row">
+                <div class="col-8" style="margin-right: 90px;">
+                    <table class="table" style="width: 150%;margin-top: 2%;">
                         <thead style="background-color: #246355">
                             <th>N° Motor</th>
                             <th>N° Chasis</th>
-                            <th style="width: 100%;">Fecha compra</th>
+                            <th>Fecha compra</th>
                         </thead>
                         <tbody>
                             <tr>
-                                <td style="width: 100%;">151891321698</td>
-                                <td style="width: 100%;">dfaasfdj561856asdasdasdasfas</td>
-                                <td style="width: 100%;"> 14/08/2019 </td>
+                                <td>151891321698</td>
+                                <td>151891518913216981321</td>
+                                <td>14/08/2019</td>
                             </tr>
                         </tbody>
                     </table>
@@ -81,81 +81,82 @@
                     <div class="col-3" style="margin-top: 3px;">
                         <h5>SELECCIONE PERIODO:</h5>
                     </div>
-                    <div class="col-7" style="margin-right: -90px;">
+                    <div class="col-7" style="margin-right:50px;">
                         Desde: <input type="date" id="bday" name="bday">
                         Hasta: <input type="date" id="bday" name="bday">
-                        <button type="button" style="margin-top: -4px;background-color: #246355; color:white;"class="btn">Aplicar</button>
+                        <button type="button" style="margin-top: -5px;background-color: #246355; color:white;"
+                            class="btn">Aplicar</button>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <table class="table">
-                        <thead style="background-color: #246355;">
-                            <th style=" vertical-align: middle;">Codigo</th>
-                            <th style=" vertical-align: middle;">Descripción</th>
-                            <th>Fecha Ult. Factura</th>
-                            <th>N° Ult. Factura</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
-                                    facilis
-                                    voluptatibus?</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit amet.</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
-                                </td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
-                                    iste architecto
-                                    eum labore enim.</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit.</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem, ipsum dolor.</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
-                                    non
-                                    consectetur quia maxime dolorem, libero distinctio quas?</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                            <tr>
-                                <td>156846</td>
-                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
-                                <td>14/08/2019</td>
-                                <td>12345</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <table class="table">
+                    <thead style="background-color: #246355;">
+                        <th style=" vertical-align: middle;">Codigo</th>
+                        <th style=" vertical-align: middle;">Descripción</th>
+                        <th>Fecha Ult. Factura</th>
+                        <th>N° Ult. Factura</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
+                                facilis
+                                voluptatibus?</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
+                            </td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
+                                iste architecto
+                                eum labore enim.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem, ipsum dolor.</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
+                                non
+                                consectetur quia maxime dolorem, libero distinctio quas?</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                        <tr>
+                            <td>156846</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
+                            <td>14/08/2019</td>
+                            <td>12345</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
