finalizando los datos de la tabla

--- a/ventana2.html
+++ b/ventana2.html
@@ -61,7 +61,52 @@
             opacity: 1;
         }
 
-        #popup {
+        #popup{
+            background: rgba(192, 192, 192, 0.7);
+            width: 100%;
+            height: 100%;
+            margin-right: auto;
+            margin-left: auto;
+            transition: all 50ms ease-in-out;
+        }
+
+        #popup2 {
+            background: rgba(192, 192, 192, 0.7);
+            width: 100%;
+            height: 100%;
+            margin-right: auto;
+            margin-left: auto;
+            transition: all 50ms ease-in-out;
+        }
+
+        #popup3 {
+            background: rgba(192, 192, 192, 0.7);
+            width: 100%;
+            height: 100%;
+            margin-right: auto;
+            margin-left: auto;
+            transition: all 50ms ease-in-out;
+        }
+
+        #popup4 {
+            background: rgba(192, 192, 192, 0.7);
+            width: 100%;
+            height: 100%;
+            margin-right: auto;
+            margin-left: auto;
+            transition: all 50ms ease-in-out;
+        }
+
+        #popup5 {
+            background: rgba(192, 192, 192, 0.7);
+            width: 100%;
+            height: 100%;
+            margin-right: auto;
+            margin-left: auto;
+            transition: all 50ms ease-in-out;
+        }
+
+        #popup6 {
             background: rgba(192, 192, 192, 0.7);
             width: 100%;
             height: 100%;
@@ -91,30 +136,30 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">1</td>
+                            <td style="text-align: center; background-color: white;color: black;">$15.911</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$154.198</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">1</td>
+                            <td style="text-align: center; background-color: white;color: black;">70</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">1</td>
+                            <td style="text-align: center; background-color: white;color: black;">36</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$65.849</td>
                         </tr>
                     </tbody>
                 </table>
             </a>
         </div>
         <div id="popup2" class="overlayd">
-            <a href="#" style="text-decoration: none">
+            <a href="#" style="text-decoration: none;">
                 <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
                     <tbody>
                         <tr>
@@ -123,30 +168,30 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">5</td>
+                            <td style="text-align: center; background-color: white;color: black;">$19.874</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">2</td>
+                            <td style="text-align: center; background-color: white;color: black;">$84.189</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">4</td>
+                            <td style="text-align: center; background-color: white;color: black;">98</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">4</td>
+                            <td style="text-align: center; background-color: white;color: black;">41</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$12.684</td>
                         </tr>
                     </tbody>
                 </table>
             </a>
         </div>
         <div id="popup3" class="overlayd">
-            <a href="#" style="text-decoration: none">
+            <a href="#" style="text-decoration: none;">
                 <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
                     <tbody>
                         <tr>
@@ -155,30 +200,30 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">7</td>
+                            <td style="text-align: center; background-color: white;color: black;">$84.695</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$451.486</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">9</td>
+                            <td style="text-align: center; background-color: white;color: black;">49</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">2</td>
+                            <td style="text-align: center; background-color: white;color: black;">14</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$158.149</td>
                         </tr>
                     </tbody>
                 </table>
             </a>
         </div>
         <div id="popup4" class="overlayd">
-            <a href="#" style="text-decoration: none">
+            <a href="#" style="text-decoration: none;">
                 <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
                     <tbody>
                         <tr>
@@ -187,30 +232,30 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">5</td>
+                            <td style="text-align: center; background-color: white;color: black;">$55.000</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">9</td>
+                            <td style="text-align: center; background-color: white;color: black;">$240.000</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">7</td>
+                            <td style="text-align: center; background-color: white;color: black;">96</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">7</td>
+                            <td style="text-align: center; background-color: white;color: black;">74</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">7</td>
+                            <td style="text-align: center; background-color: white;color: black;">$566.156</td>
                         </tr>
                     </tbody>
                 </table>
             </a>
         </div>
         <div id="popup5" class="overlayd">
-            <a href="#" style="text-decoration: none">
+            <a href="#" style="text-decoration: none,">
                 <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
                     <tbody>
                         <tr>
@@ -219,30 +264,30 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">2</td>
+                            <td style="text-align: center; background-color: white;color: black;">$65.695</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">8</td>
+                            <td style="text-align: center; background-color: white;color: black;">$151.108</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">1</td>
+                            <td style="text-align: center; background-color: white;color: black;">45</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">9</td>
+                            <td style="text-align: center; background-color: white;color: black;">20</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">9</td>
+                            <td style="text-align: center; background-color: white;color: black;">$45.356</td>
                         </tr>
                     </tbody>
                 </table>
             </a>
         </div>
         <div id="popup6" class="overlayd">
-            <a href="#" style="text-decoration: none">
+            <a href="#" style="text-decoration: none;">
                 <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
                     <tbody>
                         <tr>
@@ -251,23 +296,23 @@
                         </tr>
                         <tr>
                             <td>Precio unitario ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">7</td>
+                            <td style="text-align: center; background-color: white;color: black;">$63.696</td>
                         </tr>
                         <tr>
                             <td>Existencias cierre ultimo ejercio contable</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$548.625</td>
                         </tr>
                         <tr>
                             <td>Total unidades ingresadas</td>
-                            <td style="text-align: center; background-color: white;color: black;">1</td>
+                            <td style="text-align: center; background-color: white;color: black;">74</td>
                         </tr>
                         <tr>
                             <td>Existencia actual</td>
-                            <td style="text-align: center; background-color: white;color: black;">2</td>
+                            <td style="text-align: center; background-color: white;color: black;">30</td>
                         </tr>
                         <tr>
                             <td>Valor de la ultima compra</td>
-                            <td style="text-align: center; background-color: white;color: black;">3</td>
+                            <td style="text-align: center; background-color: white;color: black;">$132.112</td>
                         </tr>
                     </tbody>
                 </table>
